finish all basic functions

--- a/devobs/templates/base.html
+++ b/devobs/templates/base.html
@@ -328,10 +328,14 @@ desired effect
 <script src="../static/js/accounting.js" type="application/javascript"></script>
 <!-- dateformat -->
 <script src="../static/js/jquery-dateFormat.js" type="application/javascript"></script>
+<!-- DataTables -->
+<script src="../static/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
+<script src="../static/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 <!-- Optionally, you can add Slimscroll and FastClick plugins.
      Both of these plugins are recommended to enhance the
      user experience. -->
 <script src="../static/js/main.js" type="application/javascript"></script>
-
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
