--- a/devobs/templates/base.html
+++ b/devobs/templates/base.html
@@ -269,6 +269,7 @@ desired effect
         <li><a href="transfer"><i class="fa fa-link"></i> <span>Transfer Funds</span></a></li>
         <li><a href="billpay"><i class="fa fa-link"></i> <span>Pay Bills</span></a></li>
         <li><a href="profile"><i class="fa fa-link"></i> <span>Profile</span></a></li>
+        <li><a href="logout"><i class="fa fa-link"></i> <span>Logout</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
