--- a/devobs/templates/deposit.html
+++ b/devobs/templates/deposit.html
@@ -63,7 +63,7 @@
                 processData: false, // NEEDED, DON'T OMIT THIS
                success: function (d) {
                    if (d.status == 0) {
-                       getAccounts();
+                       refreshAccounts();
                        callMsg="<div class=\"callout callout-success\">\n" +
                            "                <h4>Deposit succeeded.</h4>\n" +
                            "\n</div>";
