--- a/devobs/templates/profile.html
+++ b/devobs/templates/profile.html
@@ -92,7 +92,7 @@
                     dataType: "json",
                     success: function (d) {
                         if (d.status == 0) {
-                            getProfile();
+                            refreshProfile();
                             callMsg = "<div class=\"callout callout-success\">\n" +
                                 "                <h4>Profile update succeeded.</h4>\n" +
                                 "\n</div>";
