--- a/devobs/templates/transfer.html
+++ b/devobs/templates/transfer.html
@@ -57,6 +57,7 @@
                data: form_data,
                dataType: "json",
                success: function (d) {
+                   refreshAccounts();
                    if (d.status == 0) {
                        callMsg="<div class=\"callout callout-success\">\n" +
                            "                <h4>Transfer succeeded.</h4>\n" +
