--- a/devobs/templates/paybill-manage.html
+++ b/devobs/templates/paybill-manage.html
@@ -11,8 +11,8 @@
                 <div class="block block-condensed">
                     <div class="app-heading app-heading-small">
                         <div class="title">
-                            <h2>Recent Activity</h2>
-                            <p>Your latest account usage</p>
+                            <h2>Manage My Bills</h2>
+                            <p>Your payment activities</p>
                         </div>
                         <div class="heading-elements">
                             <button class="btn btn-default btn-icon"><span class="icon-printer"></span></button>
@@ -50,8 +50,8 @@
                     <div class="block-content">
                         <div class="listing margin-bottom-0">
                             <div class="listing-item listing-item-with-icon">
-                                <span class="icon-car listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Refilling the car on gas station <span
+                                <span class="fa fa-bolt listing-item-icon"></span>
+                                <h4 class="text-rg text-bold">Electricity City Utilities SC <span
                                         class="text-muted pull-right">25/06/2017 20:11</span></h4>
                                 <div class="list-group list-group-inline">
                                     <div class="list-group-item col-md-4 col-sm-4">
@@ -70,7 +70,7 @@
                             </div>
                             <div class="listing-item listing-item-with-icon">
                                 <span class="icon-file-add listing-item-icon text-success"></span>
-                                <h4 class="text-rg text-bold">Income from Jenny Doe **5512 <span
+                                <h4 class="text-rg text-bold">United Cooperative service <span
                                         class="text-muted pull-right">25/06/2017 10:11</span></h4>
                                 <div class="list-group list-group-inline margin-bottom-0">
                                     <div class="list-group-item col-md-4 col-sm-4">
@@ -79,7 +79,7 @@
                                     </div>
                                     <div class="list-group-item col-md-4 col-sm-4">
                                         <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-success">+$250.00</span>
+                                        <span class="text-bold text-danger">-$250.00</span>
                                     </div>
                                     <div class="list-group-item col-md-4 col-sm-4">
                                         <span class="text-muted">Balance</span><br>
@@ -93,9 +93,9 @@
                     <div class="block-content">
                         <div class="listing margin-bottom-0">
                             <div class="listing-item listing-item-with-icon">
-                                <span class="icon-film-play listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Paid tickes in Theater <span
-                                        class="text-muted pull-right">23/06/2017 18:55</span></h4>
+                                <span class="fa fa-wifi listing-item-icon"></span>
+                                <h4 class="text-rg text-bold">Infinity internet <span class="text-muted pull-right">23/06/2017 18:55</span>
+                                </h4>
                                 <div class="list-group list-group-inline">
                                     <div class="list-group-item col-md-4 col-sm-4">
                                         <span class="text-muted">Account</span><br>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="listing-item listing-item-with-icon">
                                 <span class="icon-store listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Shopping in NameMall. Shop: CarloMozolini <span
+                                <h4 class="text-rg text-bold">The Philadelphia Cricket Club <span
                                         class="text-muted pull-right">23/06/2017 14:20</span></h4>
                                 <div class="list-group list-group-inline margin-bottom-0">
                                     <div class="list-group-item col-md-4 col-sm-4">
@@ -131,9 +131,9 @@
                                 </div>
                             </div>
                             <div class="listing-item listing-item-with-icon">
-                                <span class="icon-cart listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Internet shopping. Shop: AliExpress <span
-                                        class="text-muted pull-right">23/06/2017 10:11</span></h4>
+                                <span class="fa fa-truck listing-item-icon"></span>
+                                <h4 class="text-rg text-bold">Grand Rental <span class="text-muted pull-right">23/06/2017 10:11</span>
+                                </h4>
                                 <div class="list-group list-group-inline margin-bottom-10">
                                     <div class="list-group-item col-md-4 col-sm-4">
                                         <span class="text-muted">Account</span><br>
