--- a/devobs/templates/base-new.html
+++ b/devobs/templates/base-new.html
@@ -32,7 +32,6 @@
                 <a href="index2.html" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
 
                 <ul class="app-header-buttons pull-right">
-                    <li><a href="#" class="btn btn-link btn-icon"><span class="icon-cog"></span></a></li>
                     <li><a href="#" class="btn btn-default">Log Out</a></li>
                 </ul>
             </div>
@@ -120,7 +119,7 @@
 
         <div class="container container-boxed">
             <div class="app-footer-line">
-                <div class="copyright">&copy; 2016 Boooya. All right reserved in the Ukraine and other countries.
+                <div class="copyright">&copy; 2017 Devonshire. All right reserved.
                 </div>
                 <div class="pull-right">
                     <ul class="list-inline">
